# chip8-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: emulator.rs  gui.rs  main.rs
src/emulator/: instruction.rs  platform.rs  tests.rs  types.rs
src/emulator/instruction/: parser.rs  tests.rs
src/gui/: display.rs  main_window.rs
