[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.6.0"
async-trait = "0.1.89"
bitvec = "1.0.1"
bytesize = { version = "1.1.0" }
derive_more = { version = "2.1.0", features = ["from", "into", "add"] }
futures = "0.3.31"
iced = { version = "0.5", features=["system"]}
nom = "8.0.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
include_dir = "0.7.4"
nom-test-helpers = "6"
