[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.12.0"
async-trait = "0.1.58"
bitvec = "1.0.1"
derive_more = "0.99.17"
futures = "0.3.25"
nom = "7.1.1"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
include_dir = "0.7.4"
nom-test-helpers = "6"
